[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/miros/resource/Theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://addons/miros/module/SuperTag/UI/TagSettingInterface.gd" type="Script" id=2]

[node name="SuperTagSetting" type="Tabs"]
margin_right = 1024.0
margin_bottom = 600.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="TagPanel" type="PanelContainer" parent="HBoxContainer"]
margin_right = 341.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="VBoxContainer" parent="HBoxContainer/TagPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 334.0
margin_bottom = 593.0

[node name="ImportLine" type="HSeparator" parent="HBoxContainer/TagPanel/HBoxContainer"]
margin_right = 327.0
margin_bottom = 4.0

[node name="Label" type="Label" parent="HBoxContainer/TagPanel/HBoxContainer"]
margin_top = 8.0
margin_right = 327.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 32 )
theme = ExtResource( 1 )
text = "导入资源文件"
align = 1
valign = 1

[node name="ImportResource" type="HBoxContainer" parent="HBoxContainer/TagPanel/HBoxContainer"]
margin_top = 44.0
margin_right = 327.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 32 )

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/TagPanel/HBoxContainer/ImportResource"]
margin_right = 200.0
margin_bottom = 32.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3

[node name="ImportBtn" type="Button" parent="HBoxContainer/TagPanel/HBoxContainer/ImportResource"]
margin_left = 204.0
margin_right = 327.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "Import"

[node name="ImportResult" type="HBoxContainer" parent="HBoxContainer/TagPanel/HBoxContainer"]
margin_top = 80.0
margin_right = 327.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 32 )

[node name="Label" type="Label" parent="HBoxContainer/TagPanel/HBoxContainer/ImportResult"]
margin_top = 7.0
margin_right = 161.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "导入结果:"
align = 1

[node name="ResultLabel" type="Label" parent="HBoxContainer/TagPanel/HBoxContainer/ImportResult"]
margin_left = 165.0
margin_top = 7.0
margin_right = 327.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "未导入"
align = 1

[node name="ManageLine" type="HSeparator" parent="HBoxContainer/TagPanel/HBoxContainer"]
margin_top = 116.0
margin_right = 327.0
margin_bottom = 120.0

[node name="Label2" type="Label" parent="HBoxContainer/TagPanel/HBoxContainer"]
margin_top = 124.0
margin_right = 327.0
margin_bottom = 156.0
rect_min_size = Vector2( 0, 32 )
text = "标签管理"
align = 1
valign = 1

[node name="TagsContainer" type="ScrollContainer" parent="HBoxContainer/TagPanel/HBoxContainer"]
margin_top = 160.0
margin_right = 327.0
margin_bottom = 416.0
rect_min_size = Vector2( 0, 256 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/TagPanel/HBoxContainer/TagsContainer"]
margin_right = 327.0
size_flags_horizontal = 3

[node name="AddTag" type="HBoxContainer" parent="HBoxContainer/TagPanel/HBoxContainer"]
margin_top = 420.0
margin_right = 327.0
margin_bottom = 460.0
rect_min_size = Vector2( 0, 32 )

[node name="InputLine" type="LineEdit" parent="HBoxContainer/TagPanel/HBoxContainer/AddTag"]
margin_right = 161.0
margin_bottom = 40.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 3

[node name="AddBtn" type="Button" parent="HBoxContainer/TagPanel/HBoxContainer/AddTag"]
margin_left = 165.0
margin_right = 327.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 3
text = "添加标签"

[node name="SaveBtn" type="Button" parent="HBoxContainer/TagPanel/HBoxContainer"]
margin_top = 464.0
margin_right = 327.0
margin_bottom = 496.0
rect_min_size = Vector2( 0, 32 )
text = "保存"

[node name="HSeparator3" type="HSeparator" parent="HBoxContainer/TagPanel/HBoxContainer"]
margin_top = 500.0
margin_right = 327.0
margin_bottom = 504.0

[node name="PanelContainer2" type="PanelContainer" parent="HBoxContainer"]
margin_left = 341.0
margin_right = 682.0
margin_bottom = 600.0
grow_horizontal = 0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 334.0
margin_bottom = 593.0

[node name="HSeparator4" type="HSeparator" parent="HBoxContainer/PanelContainer2/VBoxContainer"]
margin_right = 327.0
margin_bottom = 4.0

[node name="Title" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 8.0
margin_right = 327.0
margin_bottom = 25.0
text = "标签编辑器"
align = 1

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 29.0
margin_right = 327.0
margin_bottom = 586.0
size_flags_vertical = 3
highlight_current_line = true
show_line_numbers = true

[node name="PanelContainer3" type="PanelContainer" parent="HBoxContainer"]
margin_left = 682.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[connection signal="button_down" from="HBoxContainer/TagPanel/HBoxContainer/ImportResource/ImportBtn" to="." method="_on_ImportBtn_button_down"]
[connection signal="button_down" from="HBoxContainer/TagPanel/HBoxContainer/AddTag/AddBtn" to="." method="_on_AddBtn_button_down"]
[connection signal="button_down" from="HBoxContainer/TagPanel/HBoxContainer/SaveBtn" to="." method="_on_SaveBtn_button_down"]
